--- a/src/app/summarizer/summarizer.component.scss
+++ b/src/app/summarizer/summarizer.component.scss
@@ -72,7 +72,7 @@
             &:not(:last-child) {
                 border-bottom: 1px solid rgba(0,0,0,.24);
             };
-            &:nth-child(11) {
+            &:nth-last-child(2) {
                 border-bottom: 2px solid rgba(0,0,0,.5);
             };
             &.header {
